--- a/src/css/components/image-viewer.scss
+++ b/src/css/components/image-viewer.scss
@@ -5,7 +5,7 @@
     .image-container {
         position: relative;
         width: 100%;
-        max-height: 400px;
+        max-height: 600px;
         overflow: hidden;
         border-radius: 1rem;
         cursor: pointer;
