--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -386,21 +386,19 @@
 }
 
 @media screen and (max-width: 1350px) {
+  .project-image-viewer .image-container {
+    max-height: 400px;
+    max-width: 90%;
+    justify-self: center;
+  }
   .project-image-viewer .modal-content {
     width: 95%;
     margin: 0 1rem;
   }
 }
 @media screen and (max-width: 690px) {
-  .project-image-viewer .project-image-viewer .image-container {
-    height: 400px;
-  }
-  .project-image-viewer .modal-content {
-    padding: 0.5rem;
-  }
-  .project-image-viewer .modal-content .close-button {
-    right: 0.5rem;
-    top: 0.5rem;
+  .project-image-viewer .image-container {
+    max-height: 300px;
   }
 }
 
@@ -1520,7 +1518,7 @@ footer {
 .project-image-viewer .image-container {
   position: relative;
   width: 100%;
-  max-height: 400px;
+  max-height: 600px;
   overflow: hidden;
   border-radius: 1rem;
   cursor: pointer;
